HelloUltraviolet/Fixtures/RejectedSource/Keys/AsyncKeyRestrictionsYieldHeld/Expected.uv
//! Expected diagnostic metadata for the AsyncKeyRestrictionsYieldHeld rejected-source specimen.

expectedDiagnostic("E-CON-0213", "requirement.21.AsyncKeyRestrictions")
